			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: Handle ~@ in format/[2,3].  SICStus compatibility.  Reported
    by Tom Schrijvers.

  * FIXED: Bug#128: memory deallocation problem in library(memfile).
    MS-Windows only.  Added Sfree() to free memory from the right
    pool.  Holger Kanwischer.

  * FIXED: Bug#129: determinism in bagof/setof.  Holger Kanwischer.

  * FIXED: Bug#125: rename_file/2 if source and destination are the same.
    Dr. Werner Wolff.

  * FIXED: phrase/3.  Detmar Meurers and others.


VERSION 5.3.2 (Feb 4, 2003)
===========================

  * ADDED: frozen/2.

  * FIXED/ADDED: Merged win_shell issues from main branch

  * ADDED: CHR library by Tom Schrijvers and Christian Holzbaur.  Thanks!

  * ADDED: Support for cyclic terms in ==/2, @>/2, etc.

  * ADDED: library assoc.pl, Adapted YAP version, originally by Richard
    O'Keefe.

  * FIXED: Bug in unifying cyclic terms.  Kuniaki Mukai.

  * ADDED: Support for cyclic terms in ground/1

  * FIXED: Bug#130: writeq('/*').  Holger Kanwischer.

  * FIXED: win_shell/2.  Added win_shell/3.  Dmitry.

  * FIXED: allow for peek_byte(-1), etc.  Michael A. Covington.

  * FIXED: Merged saved-state patches from main branch

  * NEW: renamed nb_setval/2 to nb_linkval/2, giving nb_setval/2 a better
    defined semantics.  Added duplicate_term/2 to really duplicate a term.

  * FIXED: module handling in flag/3

  * ADDED: derived_from(File) option to load_files/2.

  * MODIFIED: renamed free_variables/2 into the more widely used name
    term_variables/2.  Added free_variables/2 to the library backcomp,
    so applications with autoloading enabled (default) do not have
    to be modified.

  * ADDED: protect write/1 from looping on cyclic terms.  Short-term